feat: update oozie workflow

--- a/modules/07.oozie/lab-resources/oozie_wf/job.properties
+++ b/modules/07.oozie/lab-resources/oozie_wf/job.properties
@@ -1,4 +1,4 @@
-#Workflow file
+# Workflow file
 oozie.wf.application.path=hdfs://au/user/gauthier/oozie_wf/workflow.xml
 
 # Global properties
@@ -11,5 +11,5 @@ hivePrincipal=hive/_HOST@AU.ADALTAS.CLOUD
 oozie.use.system.libpath=true
 
 # Variables
-username=dharty
-group=1
+hiveUsername=gauthier
+clusterUsername=gauthier
