feat: update oozie lab

--- a/modules/07.oozie/lab-resources/oozie_wf/job.properties
+++ b/modules/07.oozie/lab-resources/oozie_wf/job.properties
@@ -1,6 +1,3 @@
-# Workflow file
-oozie.wf.application.path=hdfs://au/user/gauthier/oozie_wf/workflow.xml
-
 # Global properties
 jobTracker=yarn-rm-1.au.adaltas.cloud:8050
 nameNode=hdfs://au
@@ -13,3 +10,6 @@ oozie.use.system.libpath=true
 # Variables
 hiveUsername=gauthier
 clusterUsername=gauthier
+
+# Workflow file
+oozie.wf.application.path=hdfs://au/user/${clusterUsername}/oozie_wf/workflow.xml
